--- a/src/components/MenuTeam/MenuTeam.css
+++ b/src/components/MenuTeam/MenuTeam.css
@@ -1,3 +1,4 @@
+/* Container for the team */
 .menu-team {
   padding: 20px;
   background-color: #f9f9f9;
@@ -5,56 +6,95 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Heading style */
 .menu-team h2 {
   text-align: center;
   margin-bottom: 20px;
   color: #333;
 }
 
+/* List of team members */
 .team-list {
   list-style: none;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  gap: 10px; /* Adjust spacing between team items */
 }
 
+/* Each team item */
 .team-item {
-  margin: 10px;
-  padding: 10px;
-  background-color: #fff;
+  background-color: #ffffff;
+  border: 1px solid #000000;
   border-radius: 10px;
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  padding: 10px;
   text-align: center;
   width: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.pokemon-image {
+/* Pokemon image container with fixed size */
+.pokemon-image-container {
   width: 100px;
   height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden; /* Ensures image does not overflow the container */
 }
 
+/* Pokemon image style */
+.pokemon-image {
+  width: auto;
+  height: auto;
+}
+
+/* Pokemon info container */
 .pokemon-info {
-  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px; /* Adjust spacing between info elements */
 }
 
+/* Pokemon name style */
 .pokemon-name {
   font-weight: bold;
   color: #333;
 }
 
+/* Button styles */
 .evolve-button, .remove-button {
-  display: block;
   width: 100%;
-  margin-top: 10px;
   padding: 5px;
-  background-color: #6200ea;
-  color: #fff;
-  border: none;
+  background-color: #ffffff;
+  color: #000;
+  border: 1px solid #000000;
   border-radius: 5px;
   cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.evolve-button:hover, .remove-button:hover {
-  background-color: #3700b3;
+/* Evolve button hover effect */
+.evolve-button:hover {
+  background-color: #ffc6c6;
+  box-shadow: 0 0 3px #000000a4;
+}
+
+/* Remove button with red background */
+.remove-button {
+  background-color: #ff4d4d; /* Red background color */
+  color: #ffffff; /* White text color */
+}
+
+/* Remove button hover effect */
+.remove-button:hover {
+  background-color: #d41f1f; /* Darker red on hover */
+  box-shadow: 0 0 3px #000000a4;
 }
